style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  list-style-type: none;

  font-family: Roboto, sans-serif;

  --color-primary-light: rgb(25, 146, 212);
  --color-secondary-light: rgb(240, 180, 41);
  --color-background-light: rgb(226, 232, 240);
  --color-text-primary-light: rgb(0, 0, 0);
  --color-text-secondary-light: rgb(99, 99, 99);

  --default-icon-width: 20px;
  --default-icon-large-width: calc(var(--default-icon-width) * 2);
  --default-gap: 20px;

  color: white;
}

body {
  display: grid;

  grid-template-columns: 250px minmax(600px, 5fr);
  grid-template-rows: minmax(125px, 1fr) minmax(300px, 5fr);

  width: 100vw;
  height: 100vh;
}

img {
  width: var(--default-icon-width);
}

.profile-img {
  width: var(--default-icon-large-width);
}

#sidebar img {
  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%)
    hue-rotate(288deg) brightness(102%) contrast(102%);
}

.sidebar__nav--title > #sidebar__dashboard-logo {
  width: var(--default-icon-large-width);
}

#sidebar {
  grid-area: 1 / 1 / 3 / 1;
  background-color: var(--color-primary-light);

  font-weight: bold;
}

.sidebar__nav {
  display: grid;
  grid-template-columns: 1fr;
  gap: var(--default-gap);
}

.sidebar__nav--title {
  margin-top: 10px;
}

.sidebar__nav--main {
  display: grid;

  font-size: 16px;

  grid-template-columns: 1fr;
  gap: 10px;
}

.sidebar__nav--main > li,
.sidebar__nav--title {
  margin-left: 20px;

  display: grid;
  grid-template-columns: var(--default-icon-width) 3fr;
  gap: 0px 20px;
}

.sidebar__nav img {
  grid-column: 1;

  justify-self: center;
}

.sidebar__nav span {
  grid-column: 2;

  align-content: center;
}

#header {
  grid-area: 1 / 2 / 1 / 2;

  display: grid;
  grid-template-columns: minmax(700px 2fr) minmax(250px, 1fr);
  grid-template-rows: 1fr 1fr;

  column-gap: var(--default-gap);

  grid-template-areas:
    "header-search-box header-profile"
    "header-welcome header-actions";

  height: 200px;

  padding-left: 20px;
  padding-right: 40px;

  *:not(.header__actions > *) {
    color: black;
    font-weight: 700;
  }
}

.header__search-box {
  grid-area: 1 / 1 / 1 / 1;

  display: grid;
  grid-template-columns: var(--default-icon-width) fit-content(300px);
  gap: 10px;
  align-items: center;
  justify-content: start;

  grid-template-areas: "header-search-box-img header-search-box-input";
}

.header__search-box input {
  grid-area: header-search-box-input;

  background-color: var(--color-background-light);

  border-radius: 15px;
  border-width: 0px;
  font-size: 24px;

  max-width: 1000px;
}

.header__search-box img {
  grid-area: "header-search-box-img";
}

.header__profile {
  grid-area: header-profile;
  display: grid;
  grid-template-columns:
    fit-content(var(--default-icon-width)) fit-content(
      var(--default-icon-large-width)
    )
    fit-content(200px);
  justify-content: end;
  align-items: center;
  gap: var(--default-gap);
}

.header__profile > * {
  align-self: center;
}

.header__welcome {
  grid-area: header-welcome;

  display: grid;
  grid-template-columns:
    fit-content(var(--default-icon-large-width))
    fit-content(300px);
  gap: var(--default-gap);
  justify-content: start;
  align-items: center;
}

.header__welcome h1 {
  font-size: 16px;
}

.header__welcome p {
  font-size: 24px;
}

.header__actions {
  grid-area: header-actions;

  display: grid;

  grid-template-columns: repeat(3, fit-content(100px));
  gap: var(--default-gap);
  justify-content: end;
  align-items: center;
}

.header__actions button {
  background-color: rgb(25, 146, 212);
  border-radius: 20px;
  border-width: 0px;
  padding: 10px 30px;
  font-size: 16px;
  font-weight: normal;
}

main {
  grid-area: 2 / 2 / 2 / 2;
  background-color: var(--color-background-light);

  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: var(--default-gap);

  grid-template-areas:
    "main-projects main-announcements"
    "main-projects main-trending";
}

main h1 {
  color: black;
  font-size: 18px;
}

main p {
  color: rgb(99, 99, 99);
  font-size: 14px;
}

#main__projects {
  grid-area: main-projects;

  display: grid;
  grid-template-rows: 50px 1fr;
  margin-left: 20px;
}

#main__projects > h1 {
  align-self: end;
}

#main__projects--cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-template-rows: repeat(auto-fill, minmax(180px, 1fr));
  gap: 20px;

  justify-content: center;
  align-items: center;
}

#main__projects--cards .project-card {
  background-color: white;

  border-radius: 5px;
  box-shadow: 5px 5px 8px 0px rgba(140, 140, 140, 0.49),
    10px 0px 0px 0px rgba(240, 180, 41, 1) inset;
  -webkit-box-shadow: 5px 5px 8px 0px rgba(140, 140, 140, 0.49),
    10px 0px 0px 0px rgba(240, 180, 41, 1) inset;
  -moz-box-shadow: 5px 5px 8px 0px rgba(140, 140, 140, 0.49),
    10px 0px 0px 0px rgba(240, 180, 41, 1) inset;

  min-width: 250px;
  max-width: 300px;
  height: 180px;

  display: grid;
  grid-template-rows: 1fr 1fr 1fr;
  align-items: end;
  padding: 0px 20px;
}

.project-card p {
  align-self: start;
}

.project-card footer {
  justify-self: end;
}

#main__sidebar--announcements {
  grid-area: main-announcements;
}

#main__sidebar--trending {
  grid-area: main-trending;
}

